# cubase-vst-plugins

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
plugins/BitCrusher/: CMakeLists.txt  INFO.md
plugins/BitCrusher/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Gain/: CMakeLists.txt  INFO.md
plugins/Gain/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/SidechainComp/: CMakeLists.txt
plugins/SidechainComp/Source/: PluginProcessor.h
plugins/SmartUnmasker/: CMakeLists.txt  INFO.md
plugins/SmartUnmasker/Source/: OverlapAdd.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectralMask.h
plugins/SmartUnmasker/Source/DSP/: FFTProcessor.cpp  FFTProcessor.h  OverlapAdd.cpp  OverlapAdd.h  SpectralMask.cpp  SpectralMask.h
plugins/SpaceCarver/: CMakeLists.txt  INFO.md
plugins/SpaceCarver/Source/: FFTProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectralMask.h  SpectrumAnalyzer.h
